
* Fixed bug in raster.downsample where plot returned error when scatter=TRUE with one covariate  

* Added function aspline.downscale for downscaling rasters using multivariate adaptive 
  regression splines (thanks to discussion with Felipe Benavides)

* Fixed a bug in breeding.density (thanks to Eric Newkirk) where st_distance was resulting 
  in a units class object and crashing the function. 
  
* Feature request (Alessandro Mondanaro), added an argument/option in sf_kde for using ks or the modified MASS kde2d function that
  facilitates weights. The MASS kde2d was the KDE function in the sp.kde function.   
  
* Fixed a bug in curvature (thanks to Rachel Wright) where type="mcnab" was returning source raster values 

* Updated knn function to use sf class objects  

* Fixed bug in wt.centroid when sf object is tibble (thanks to Andrew Gustar for drawing my attention to the bug) 

* Added new function for deriving Leaf Area Index (LAI)

* Fixed bug in stratified.random where if there are no replicates with replace = FALSE no results returned

* Enhancement added support for prewhiting of autocorrelated time-series in kendall function

spatialEco_2.0-2
=================   

* Added suggest for the lwgeom package after sf dropped as dependency

* Added function to derive LAI (leaf area index) from NDVI

* Fixed bug in sf.de where bandwidth was not being reconized as argument

* Reverted sf.kde to use modification of MASS 2dkde as, ks methods are somewhat
  questionable with spatial data. 

spatialEco_2.0-3
=================   

* Fixed bug in sf.kde where error was returned when specifying ref argument

* Fixed bug in aspline.downscale where, grid.search = TRUE option was producing an error

* Fixed bug in raster.kendall where, other than the default, the method argument was not being reconized

* Depreciated cgls.url due to digest files no longer reliable

* Depreciated oli.aws due to AWS Registry of Open Data changing to the AWS Data Exchange 